Auswertung viel gemacht und plot.py

--- a/lit.bib
+++ b/lit.bib
@@ -69,10 +69,17 @@
     edition      = {4}
 }
 
-@book{DasIngenieurwissen,
-title = {Das Ingenieurwissen},
-author = {Czichos, Horst and Hennecke, Manfred},
-year = {2012},
-isbn = {978-3-642-22850-6},
-publisher = {Springer Verlag},
+@book{Ingenieurwissen,
+	title 		= {Das Ingenieurwissen},
+	author 		= {Czichos, Horst and Hennecke, Manfred},
+	year 		= {2012},
+	isbn 		= {978-3-642-22850-6},
+	publisher 	= {Springer Verlag},
+}
+
+@online{Dichlordifluormethan,
+	title = 	{Dichlordifluormethan},
+	url = {https://gestis.dguv.de/data?name=026210},
+	urldate = {2021-12-10},
+	organization = {Deutsche Gesetzliche Unfallversicherung e.V. (DGUV)},
 }
