--- a/v206/content/diskussion.tex
+++ b/v206/content/diskussion.tex
@@ -1,2 +1,11 @@
 \section{Diskussion}
 \label{sec:Diskussion}
+Zunächst wird der gemessene Temperaturverlauf diskutiert. Man kann diese Messwerte nicht mit einer Literatur vergleichen, da der Messprozess von sehr vielen Parametern abhängt. 
+Über die Differentialquotienten $\frac{\Delta T_1}{\Delta t}$ und $\frac{\Delta T_2}{\Delta t}$, die Verdampfungswärme L, den Massendurchsatz $\frac{\text{d}m}{\text{d}t}$ und 
+die vom Kompressor abgegebene Leistung $N_{mechanisch}$ lassen sich keine Vergleiche zu Theoriewerten und ähnlichem ziehen. Lediglich kann angemertk werden das die Ungenauigkeiten 
+dieser Werte nicht aus dem Ruder laufen. Anders ist dies bei der Güteziffer. Diese weicht sehr stark Güteziffer von ihrem Theoriewert ab. Mögliche Fehler gibt es reichlich. So arbeitet
+der Kompressor real nicht adiabatisch. Die Reservoire waren nicht wirklich gut isoliert so das ein konstanter Wärmeaustausch mit der Umgebung stattfinden konnte. Außerdem wurden 
+Reibungsverluste vernachlässigt, welche beim Gastransport weniger wichtig sind, aber beim Rotor im Wasser sorgt dies für zusätzliche Erwärmung der Reservoire. 
+Der Messprozess konnte auch nicht perfekt minütlich durchgeführt werden, da es händisch nicht möglich ist alle relevanten Werte in einem Moment festzuhalten. Dazu kommen noch die 
+schlechten Messgeräte vom Druck und der Leistung, da diese keine hohe Ablesegenauigkeit geboten haben. Außerdem arbeitet die gesamte Wärmepumpe bei höherer Temperaturdifferenz
+immer schlechter wodruch auch die Ungenauigkeiten insgesamt immer größer werden. Zusammfassend ergibt sich eine relativ hohe Ungenauigkeit in diesem Experiment. 
