--- a/v206/content/theorie.tex
+++ b/v206/content/theorie.tex
@@ -1,5 +1,5 @@
 \section{Ziel}
-\label{sec:Theorie}
+\label{sec:Ziel}
 In diesem Versuch wird eine Wärmepumpe untersucht. Hierzu werden die wichtgien Eigenschaften einer Wärmepumpe mittels Ausgleichsrechnungen bestimmt. Diese kann man dann mit einer 
 theoretischen idealen Wärmepumpe verlgleichen und somit Effizienz und weiteres diskutieren.
 \section{Theorie}
@@ -49,7 +49,7 @@ beziehungsweise Wärme verliert. Diese Energie wird dann durch Kondensation im a
 Eine Wärmepumpe kann noch durch viele Apperatschaften erweitert und verbessert werden, allerdings wird hier nicht weiter darauf eingegangen. 
 
 \subsection{Kenngrößen einer realen Wärmepumpe}
-
+\label{subsec:Kenngrößen}
 
 Für eine Wärmepumpe nach \autoref{fig:Aufbau_Skizze} gibt es drei relevante Kenngrößen. Eine davon ist die bereits im \autoref{subsec:Prinzip} genannte Güte. Dazu kommen dann noch im
 folgenden der Massendurchsatz des Transportmediums $\frac{\text{d}m}{\text{d}t}$ und der Wirkungsgrad $\eta_{\text{K}}$ des Kompressors K. 
@@ -70,7 +70,7 @@ Der Massendurchsatz kann ebenfalls aus der selben Messreihe mit $T_2$ bestimmt w
     \label{eqn:Massendurchsatz}
     \frac{\text{d}m}{\text{d}t} = \frac{\left(m_2 c_w + m_k c_k\right)}{L}\frac{\Delta T_2}{\Delta t}
 \end{equation}
-Die Formel ähnelt \autoref{Güte_Messung}. Lediglich beschreibt hier der Index 2 das Reservoir 2 und das $N_{\text{mechanisch}}$ hat sich in ein $L$ gewandelt, welches man die Kondensationswärme nennt.
+Die Formel ähnelt \autoref{eqn:Güte_Messung}. Lediglich beschreibt hier der Index 2 das Reservoir 2 und das $N_{\text{mechanisch}}$ hat sich in ein $L$ gewandelt, welches man die Kondensationswärme nennt.
 Dieses wird aus einer Messreihe per Ausgleichsrechnung bestimmt um den Massendurchsatz bestimmen zu können.
 
 
