--- a/v206/content/diskussion.tex
+++ b/v206/content/diskussion.tex
@@ -1,11 +1,19 @@
 \section{Diskussion}
 \label{sec:Diskussion}
-Zunächst wird der gemessene Temperaturverlauf diskutiert. Man kann diese Messwerte nicht mit einer Literatur vergleichen, da der Messprozess von sehr vielen Parametern abhängt. 
-Über die Differentialquotienten $\frac{\Delta T_1}{\Delta t}$ und $\frac{\Delta T_2}{\Delta t}$, die Verdampfungswärme L, den Massendurchsatz $\frac{\text{d}m}{\text{d}t}$ und 
-die vom Kompressor abgegebene Leistung $N_{mechanisch}$ lassen sich keine Vergleiche zu Theoriewerten und ähnlichem ziehen. Lediglich kann angemertk werden das die Ungenauigkeiten 
-dieser Werte nicht aus dem Ruder laufen. Anders ist dies bei der Güteziffer. Diese weicht sehr stark Güteziffer von ihrem Theoriewert ab. Mögliche Fehler gibt es reichlich. So arbeitet
-der Kompressor real nicht adiabatisch. Die Reservoire waren nicht wirklich gut isoliert so das ein konstanter Wärmeaustausch mit der Umgebung stattfinden konnte. Außerdem wurden 
-Reibungsverluste vernachlässigt, welche beim Gastransport weniger wichtig sind, aber beim Rotor im Wasser sorgt dies für zusätzliche Erwärmung der Reservoire. 
-Der Messprozess konnte auch nicht perfekt minütlich durchgeführt werden, da es händisch nicht möglich ist alle relevanten Werte in einem Moment festzuhalten. Dazu kommen noch die 
-schlechten Messgeräte vom Druck und der Leistung, da diese keine hohe Ablesegenauigkeit geboten haben. Außerdem arbeitet die gesamte Wärmepumpe bei höherer Temperaturdifferenz
-immer schlechter wodruch auch die Ungenauigkeiten insgesamt immer größer werden. Zusammfassend ergibt sich eine relativ hohe Ungenauigkeit in diesem Experiment. 
+Über die Differentialquotienten $\frac{\Delta T_1}{\Delta t}$ und $\frac{\Delta T_2}{\Delta t}$, die Verdampfungswärme $L$, sowie den Massendurchsatz $\frac{\text{d}m}{\text{d}t}$
+lassen sich keine Vergleiche zu Theoriewerten ziehen. 
+Anders ist dies bei der Güteziffer. Diese ist sehr viel kleiner als der Theoriewert $\nu_{\text{ideal}}$ für die ideale Güteziffer. 
+Mögliche Ursachen dafür gibt es reichlich. So arbeitet
+der Kompressor real nicht adiabatisch, die Reservoire und Rohrleitungen können nicht vollständig isoliert werden, sodass 
+ein konstanter Wärmeaustausch mit der Umgebung stattfindet. Außerdem wurden 
+Reibungsverluste vernachlässigt, welche beim Gastransport weniger wichtig sind, aber bei den Rührmotoren im Wasser für eine zusätzliche Erwärmung der Reservoire sorgen können. 
+Des Weiteren war es unmöglich den Messprozess exakt durchzuführen, da es händisch nicht möglich ist alle relevanten Werte gleichzeitig festzuhalten. Dazu kommen noch die 
+Ablesegenauigkeiten der analogen Messgeräte von Druck und Leistung. Weiterhin arbeitet die gesamte Wärmepumpe bei höherer Temperaturdifferenz
+immer ineffizienter, wodurch auch die Ungenauigkeiten insgesamt immer größer werden. 
+
+Dennoch steht all dies nicht in Widerspruch zur Theorie, da die reale Güteziffer eben kleiner
+als die Ideale ist. Auch die (fallende) Monotonie der aus den Messwerten berechneten Güteziffern ist eigentlich eine Bestätigung der Theorie, da diese den oben genannten
+Effizienzverlust bei steigendem Temperaturunterschied vorhersagt. Selbiges gilt für die mechanische Leistung $N$, dessen berechnetete Werte weitaus kleiner als die Messwerte
+ausfallen. Der Trend der sinkenden Effizienz ist auch hier zu erkennen. 
+Zusammfassend ergibt sich, dass die reale Wärmepumpe, die in diesem Versuch verwendet wurde, sehr stark von der idealen Wärmepumpe abweicht, aber in der Funktionsweise der
+Theorie entspricht.
